5th Fixed CORS and OPTIONS preflight issues